# muri

./: .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/muri/: Cargo.toml
crates/muri-cli/: Cargo.toml
crates/muri-cli/src/: main.rs
crates/muri-napi/: Cargo.toml
crates/muri-napi/src/: lib.rs
crates/muri/src/: cli.rs  collector.rs  dependencies.rs  graph.rs  lib.rs  module_cache.rs  parser.rs  reporter.rs  resolver.rs  types.rs
crates/muri/src/compiler/: mod.rs  registry.rs  scss.rs
crates/muri/src/plugin/: cypress.rs  eslint.rs  husky.rs  jest.rs  lint_staged.rs  mod.rs  nextjs.rs  playwright.rs  postcss.rs  registry.rs  storybook.rs  tailwind.rs  typescript.rs  vite.rs  vitest.rs
crates/muri/tests/: scss_integration.rs
crates/unused-files/: Cargo.toml
crates/unused-files-cli/: Cargo.toml
crates/unused-files-cli/src/: main.rs
crates/unused-files-napi/: Cargo.toml
crates/unused-files-napi/src/: lib.rs
crates/unused-files/src/: cli.rs  graph.rs  lib.rs  types.rs
npm/muri/: cli.js  index.d.ts  index.js  native.d.ts  native.js  package.json
npm/unused-files/: cli.js  index.d.ts  index.js  package.json
scripts/: postprepublish.js
src/: cli.rs  collector.rs  lib.rs  main.rs  reporter.rs
tests/: node-api.test.js
tests/fixtures/complex/: barrel.ts  index.ts  lazy-module.ts  orphan.ts  static-import.ts  types.ts
tests/fixtures/complex/deep/: helper.ts  nested.ts
tests/fixtures/node-api/src/: helper.ts  index.ts  unused.ts
tests/fixtures/scss/: index.ts  package.json  unused.ts
tests/fixtures/scss/styles/: index.scss  unused.scss
tests/fixtures/simple/: cjs-entry.js  index.ts  orphan.ts  unused.ts  utils.ts
tests/fixtures/simple/components/: Button.ts
