[package]
name = "unused-files"
version = "0.1.0"
edition = "2021"
description = "Fast CLI tool to detect unused files in JavaScript/TypeScript projects"

[dependencies]
oxc_parser = "0.49"
oxc_resolver = "3"
oxc_ast = "0.49"
oxc_span = "0.49"
oxc_allocator = "0.49"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
dashmap = "6"

[profile.release]
lto = true
codegen-units = 1
