[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/muri"

[workspace.dependencies]
# OXC dependencies
oxc_parser = "0.49"
oxc_resolver = "3"
oxc_ast = "0.49"
oxc_span = "0.49"
oxc_allocator = "0.49"

# Core dependencies
glob = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-strip-comments = "3"
ignore = "0.4"
dashmap = "6"
thiserror = "2"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

# NAPI dependencies
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace.lints.clippy]
disallowed_types = "warn"
disallowed_methods = "warn"

[profile.release]
lto = true
codegen-units = 1
