[package]
name = "muri-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to detect unused files in JavaScript/TypeScript projects"

[[bin]]
name = "muri"
path = "src/main.rs"

[dependencies]
muri = { path = "../muri" }
clap.workspace = true
serde_json.workspace = true
json-strip-comments.workspace = true
