[package]
name = "muri-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAPI bindings for muri"

[lib]
crate-type = ["cdylib"]

[dependencies]
muri = { path = "../muri" }
napi.workspace = true
napi-derive.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build = "2"
