[package]
name = "unused-files-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to detect unused files in JavaScript/TypeScript projects"

[[bin]]
name = "unused-files"
path = "src/main.rs"

[dependencies]
unused-files = { path = "../unused-files" }
clap.workspace = true
